# cpp_study

./: CmakeLists.txt  README.md
report001/: CMakeLists.txt
report001/src/: bsdf.hpp  camera.hpp  intersection.hpp  main.cpp  material.hpp  object.hpp  parallel.hpp  ray.hpp  rng.hpp  scene.hpp  texture.hpp  utility.hpp  vec3.hpp
report001/src/renderer/: renderer.hpp  simple.hpp
src/: main.cpp
